--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 
@@ -8,7 +11,7 @@
 
     <form method="post">
         {% csrf_token %} {{ form.as_p }}
-        <input type="submit" value="Register" />
+        <button type="submit" class="btn btn-primary">Register</button>
     </form>
 </body>
 
