--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">TinyApp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -19,9 +19,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+
                 <ul class="navbar-nav">
-                    <li class="nav-item"> My URLs</li>
-                    <li class="nav-item"> Create New URL</li>
+                    <li class="nav-item {{ 'nav-link active' }}"> Register</li>
+                    <li class="nav-item {{ 'nav-link active' }}"> My URLs</li>
+                    <li class="nav-item {{ 'nav-link active' }}"> Create New Url</li>
+                    </li>
                 </ul>
             </div>
         </div>
