--- a/templates/base.html
+++ b/templates/base.html
@@ -21,12 +21,29 @@
             <div class="collapse navbar-collapse" id="navbarNav">
 
                 <ul class="navbar-nav">
-                    <li class="nav-item {{ 'nav-link active' }}"> Register</li>
-                    <li class="nav-item {{ 'nav-link active' }}"> My URLs</li>
-                    <li class="nav-item {{ 'nav-link active' }}"> Create New Url</li>
+                    {% if user.is_authenticated == False %}
+                    <li class="nav-item {{ 'nav-link active' }}"> <a href="{% url 'register'%}" style='color:white;
+                            text-decoration:none'>Register</a> </li>
+                    {% endif %}
+                    <li class="nav-item {{ 'nav-link active' }}"> <a href="{% url 'urls' %}" style='color:white;
+                            text-decoration:none'>My
+                            URLs</a></li>
+                    <li class="nav-item {{ 'nav-link active' }}"> <a href="{% url 'urls-new' %}"
+                            style='color:white; text-decoration:none'>Create New Url</a></li>
                     </li>
                 </ul>
             </div>
+            {% if user.is_authenticated == False %}
+            <form method="get" action="/login/">{% csrf_token %}
+                <div><button class="btn btn-danger" type="submit">Login</button></div>
+            </form>
+            {% endif %}
+            {% if user.is_authenticated %}
+            <div class="navbar-brand"> Welcome {{user.first_name}}!</div>
+            <form method="get" action="/logout/">{% csrf_token %}
+                <div><button class="btn btn-danger" type="submit">Log out</button></div>
+            </form>
+            {% endif %}
         </div>
     </nav>
     <div class="container">
