--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
 
 <!DOCTYPE html>
@@ -10,8 +11,9 @@
     <h1>Register a User</h1>
 
     <form method="post">
-        {% csrf_token %} {{ form.as_p }}
+        {% csrf_token %} {{ form | crispy }}
         <button type="submit" class="btn btn-primary">Register</button>
+        <p> Registered ?Log in <a href="{% url 'login' %}"> here </a></p>
     </form>
 </body>
 
