--- a/templates/urls_new.html
+++ b/templates/urls_new.html
@@ -2,9 +2,16 @@
 {% block content %}
 
 <h3>Create TinyURL</h3>
+{% if user.is_authenticated %}
 <form class="form-inline" method="POST">
     {% csrf_token %} {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+{% endif %}
+{% if user.is_authenticated == False %}
+<p> Thou shalt not pass ! Please <a href="{% url 'login' %}"> Login</a> or <a href="{% url 'register' %}">
+        Register</a>
+</p>
+{% endif %}
 
 {% endblock content %}
